# MyMusicPlayer

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  example.env.md  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/layout/: PageContainer.tsx  PageContainerWithBack.tsx  Sidebar.tsx  SidebarItem.tsx
src/components/music player/: CurrentSongDetails.tsx  CurrentSongDialog.tsx  CurrentSongDialogContent.tsx  ExpandMusicPlayer.tsx  MusicPlayer.tsx  MusicPlayerControls.tsx  ProgressBar.tsx  VolumeControl.tsx
src/components/shared/: ConfirmDialog.tsx  SVGIcon.tsx  SimpleButton.tsx
src/components/songs/: SongImage.tsx
src/helpers/: svgIcons.ts
src/hooks/: useLanguage.tsx  useMusicPlayer.tsx  usePlaylists.tsx  useTheme.tsx
src/i18n/en/: global.json
src/i18n/es/: global.json
src/interfaces/: ILyrics.ts  IPlaylist.ts  ISong.ts  Song.ts
src/pages/: ErrorPage.tsx  MainPage.tsx  MusicPlayerPage.tsx  PlaylistPage.tsx  PlaylistsPage.tsx  SettingsPage.tsx
src/router/: index.tsx
src/store/: MusicPlayerStore.tsx  PlaylistsStore.tsx
src/styles/layout/: PageContainer.css  Sidebar.css
src/styles/music player/: CurrentSongDetails.css  CurrentSongDialog.css  CurrentSongDialogContent.css  ExpandMusicPlayer.css  MusicPlayer.css  MusicPlayerControls.css  ProgressBar.css  VolumeControl.css
src/styles/pages/: MainPage.css  MainPageHeader.css  MusicPlayerPage.css  SongList.css
src/styles/shared/: ConfirmDialog.css  SimpleButton.css
(+13 files in other folders)
